<resources>
    <string name="app_name">MyPhoneBook</string>
    <string name="phone_book">Phone Book</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="add_profile_photo">Add Profile photo</string>
    <string name="add_profile_update_photo">Add Profile / Update Photo</string>

</resources>